--- a/semana_22/src/styles/Navbar.css
+++ b/semana_22/src/styles/Navbar.css
@@ -1,24 +1,11 @@
-* {
-    margin: 0;
-    padding: 0%;
-    box-sizing: border-box;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto 1fr auto;
-    min-height: 100vh;
-}
-
 .section_nav {
     background-color: #333;
     padding: 10px 20px;
-    position: sticky;
     top: 0;
     z-index: 1;
-    place-items: center;
+    display: flex;
+    justify-content: space-between; /* separa logo y menú */
+    align-items: center;
 }
 
 .nav {
@@ -58,6 +45,7 @@
     min-width: 150px;
     border-radius: 5px;
     z-index: 1;
+    transition: all 0.3s ease;
 }
 
 .sub_nav a {
